Logger_code_Base/force-app/main/default/objects/Logger_Event__e/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <description>tores the name of the Apex class where a log event occurred.</description>
    <label>Class</label>
    <length>30</length>
    <type>Text</type>
</CustomField>