Logger_code_Base/force-app/main/default/objects/Logger_Event__e/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Related message of log record</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>