Logger_code_Base/force-app/main/default/objects/Logger_Event__e/fields/Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Number__c</fullName>
    <description>log sequence number</description>
    <label>Sequence Number</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>